--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~6sA2VLIC#QluieImpMRKU_cM4AN3r9S9NHbrh_peH0FCFt6wTsT4"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
+OWNER_NUMBER=32465660046
+SUDO_NUMBER=32465660046
 OWNER_NAME=INCONNU BOY
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
